2009-09-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/PreferencesUI/UIxPreferences.m (-userComposeMessagesType):
	return a default value of @"text" if the default compose type has
	never been changed by the user. Otherwise, saving the preferences
	will never enable the window to be closed since the new value will
	always be different from nil.

2009-09-17  Cyril Robert <crobert@inverse.ca>

	* UI/Contacts/UIxListEditor.m: Renamed "name" to "listName"

2009-09-16  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Updated the ICSimport text to be more specific
	* We now warn for no SSL bundle in GNUstep when
	trying to load a remote ICS file and it's failing
	over SSL. It's a guess but it's better than nothing.

2009-09-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m (-lookupName:inContext:acquire:):
	instanciated objects may be queried twice during the same session,
	before being saved into the database. Therefore we cache them to
	avoid losing their version number.

	* UI/WebServerResources/AdministrationUI.js,
	UI/WebServerResources/ContactsUI.js,
	UI/WebServerResources/MailerUI.js,
	UI/WebServerResources/MailerUIdTree.js,
	UI/WebServerResources/SchedulerUI.js,
	UI/WebServerResources/UIxAclEditor.js,
	UI/WebServerResources/UIxCalendarProperties.js,
	UI/WebServerResources/UIxComponentEditor.js,
	UI/WebServerResources/UIxContactsUserFolders.js,
	UI/WebServerResources/UIxMailEditor.js,
	UI/WebServerResources/UIxPreferences.js,
	UI/WebServerResources/UIxTaskEditor.js,
	UI/WebServerResources/generic.js: renamed the function "label" to
	"getLabel" to avoid overriding local function variables.

2009-09-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/MailerUI.js (configureLoadImagesButton):
	retrieve all "img" elements with an "unsafe-src" attribute and
	remember them in an array attached to $("messageContent"). We also
	void using "delete" on the stored array because IE 7 is too dumb.
